legacy_tests/fixtures/components/invalid-foldable/old.blade.php
@blaze(fold: true)

<input type="text" name="email" value="{{ old('email') }}" />
